update img link
update img link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <div class="banner-info">
                     <div class="nav">
-                        <h1><a href="index.html" class="logo"><img src="/img/logo.png" alt="logo"></a></h1>
+                        <h1><a href="index.html" class="logo"><img src="img/logo.png" alt="logo"></a></h1>
                         <a href="project.html" class="btn-s btn-secondary">方案費用</a>
                     </div>
             
@@ -33,7 +33,7 @@
                             <p class="title-s">Facebook、Instagram、LINE 聊天機器人解決方案</p>
                         </div>
                         <div class="img">
-                            <img src="/img/home.svg" alt="home">
+                            <img src="img/home.svg" alt="home">
                         </div>
                     </div>
                 </div>    
@@ -74,28 +74,28 @@
                 <p class="title-s mb-48">量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策</p>
                 <ul class="card">
                         <li class="card-item">
-                            <img src="/img/ch01.svg" alt="ch01" class="card-img">
+                            <img src="img/ch01.svg" alt="ch01" class="card-img">
                             <div class="card-text">
                                 <p class="text mb-16 primary">活動主</p>
                                 <div class="text">用戶數位足跡掌握在手<br> 精準取得客戶輪廓，提供分析</div>
                             </div>
                         </li>
                         <li class="card-item">
-                            <img src="/img/ch02.svg" alt="ch01" class="card-img">
+                            <img src="img/ch02.svg" alt="ch02" class="card-img">
                             <div class="card-text">
                                 <p class="text mb-16 primary">創作者</p>
                                 <div class="text">自由設計互動腳本<br> 輕鬆整合各項數據</div>
                             </div>
                         </li>
                         <li class="card-item">
-                            <img src="/img/ch03.svg" alt="ch01" class="card-img">
+                            <img src="img/ch03.svg" alt="ch03" class="card-img">
                             <div class="card-text">
                                 <p class="text mb-16 primary">企業品牌</p>
                                 <div class="text">多元資料整合，做出服務差異化<br> 幫助企業加速決策</div>
                             </div>
                         </li>
                         <li class="card-item">
-                            <img src="/img/ch01.svg" alt="ch01" class="card-img">
+                            <img src="img/ch04.svg" alt="ch04" class="card-img">
                             <div class="card-text">
                                 <p class="text mb-16 primary">其他</p>
                                 <div class="text">創造更多可能...</div>
@@ -157,7 +157,7 @@
                 <h2 class="title-l mb-48 text-center">好評如潮</h2>
                 <ul class="message">
                         <li class="message-item">
-                        <img class="message-img" src="/img/user01.jpg" alt="user01">
+                        <img class="message-img" src="img/user01.jpg" alt="user01">
                         <div class="message-info">
                                 <p class="text border-width-1">
                                     原來聊天機器人可以這麼有人性！團隊有完整的行銷計畫提供數位整合，
@@ -177,7 +177,7 @@
                             </div>
                         </li>
                         <li class="message-item d-none">
-                            <img class="message-img" src="/img/user02.jpg" alt="user01">
+                            <img class="message-img" src="img/user02.jpg" alt="user02">
                             <div class="message-info">
                                 <p class="text border-width-1">
                                     團隊很積極的協助行銷追蹤，針對機器人進行優化，
@@ -197,7 +197,7 @@
                             </div>
                         </li>
                         <li class="message-item d-none">
-                            <img class="message-img" src="/img/user03.jpg" alt="user01">
+                            <img class="message-img" src="img/user03.jpg" alt="user03">
                             <div class="message-info">
                                 <p class="text border-width-1">
                                     經營了好久的IG，一直無法提升粉絲數，
