--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
             <div class="container">
                 <div class="banner-info">
                     <div class="nav">
-                        <h1><a href="index.html" class="logo"><img src="/img/logo.png" alt="logo"></a></h1>
+                        <h1><a href="index.html" class="logo"><img src="img/logo.png" alt="logo"></a></h1>
                         <a href="project.html" class="btn-s btn-secondary">方案費用</a>
                     </div>
             
